# shillelagh-govinfoapi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/shillelagh_govinfo/: govinfo.py
tests/: test_govinfo.py
tests/fakes/: __init__.py  govinfo_empty_response.json  govinfo_response.json
