[metadata]
name = shillelagh-govinfo
version = 0.0.1
url = https://github.com/blackerby/shillelagh-govinfo
author = William Blackerby
author_email = "William Blackerby" <wmblackerby@gmail.com>
description = A shillelagh adapter for the Government Publishing Office GovInfo API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    shillelagh>=1.2.6

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
shillelagh.adapter =
    govinfoapi = shillelagh_govinfo.govinfo:GovInfoAPI
