[metadata]
name = shillelagh-govinfo
version = 0.0.1
url = https://github.com/blackerby/shillelagh-govinfo
author = William Blackerby
author_email = "William Blackerby" <wmblackerby@gmail.com>
description = A shillelagh adapter for the Government Publishing Office GovInfo API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    shillelagh>=1.2.6

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
shillelagh.adapter =
    govinfoapi = shillelagh_govinfo.govinfo:GovInfoAPI

[flake8]
max-line-length = 88
per-file-ignores = tests/test_govinfo.py: E501

# TODO: add mypy configuration

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = shillelagh_govinfo
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/shillelagh_govinfo
    */site-packages/shillelagh_govinfo

[tox:tox]
isolated_build = True
envlist = py38,py39,py310,py311,py312

[testimports]
deps =
    pytest
    requests
    requests_cache
    pytest-cov
    pytest-randomly
    pytest_mock
    requests_mock

[testenv]
commands = pytest {posargs}
deps =
    {[testimports]deps}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports --install-types {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs: src tests}
